# FirstProject

./: CMakeLists.txt  README.md  main.cpp
add/: CMakeLists.txt  add.h
mul/: CMakeLists.txt  mul.cpp  mul.h
tests/: CMakeLists.txt  test_add.cpp  test_mul.cpp
